<resources>
    <string name="app_name">TNM082_lab1</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="help">Help</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_item">Add an item</string>
    <string name="edit_item">Edit an item</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Item description</string>
    <string name="dialog_sort_title">Sort your list</string>
    <string name="options">Options</string>
    <string name="sorting">Sorting</string>
    <string name="ascending_order">Ascending Order</string>
    <string name="rate">rate</string>
    <string name="rating">rating</string>
    <string name="_id">_id</string>
    <string name="title">title</string>
</resources>
